--- a/src/styles/_miscellaneous.scss
+++ b/src/styles/_miscellaneous.scss
@@ -37,8 +37,7 @@ span.zippy {
 
 .index-boxnbt {
   max-width: 950px;
-  padding: 1em 0 2em;
-  margin: 0 auto 1em;
-  background: #fafafa;
+  padding: 1em 0;
+  margin: 0 auto;
+  background: #ffffff;
 }
-
