--- a/src/styles/_post.scss
+++ b/src/styles/_post.scss
@@ -49,14 +49,20 @@ Posts and pages
     vertical-align: text-top;
   }
 
-  h1,
+  h1{
+    font-size: 2rem;
+  }
+
   h2 {
     font-size: 1.75rem;
   }
 
-  h3,
-  h4 {
+  h3 {
     font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
   }
 
   h5,
