--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,7 +1,7 @@
 /*--------------------------------------------------------------
 Typography
 --------------------------------------------------------------*/
-@import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
+// @import url(//fonts.googleapis.com/earlyaccess/notosanstc.css);
 
 body,
 button,
